# hamal_bmosh

./: README.md  docker-compose.yml  hebrew_constants.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
hamal/: asgi.py  settings.py  urls.py  wsgi.py
hamal_bmosh/: apps.py  choices.py
hamal_bmosh/admin/: __init__.py  bus.py  event.py  hanich.py  structure.py
hamal_bmosh/migrations/: 0001_initial.py  0002_alter_hanich_options_alter_historicalhanich_options.py  0003_alter_hanich_grade_alter_hanich_is_cancelled_and_more.py  0004_mahoz_historicalmahoz_ken_historicalken.py  0005_add_mahozot.py  0006_add_kenim.py  0007_remove_hanich_mahoz_remove_historicalhanich_mahoz.py  0008_hanich_mahoz_historicalhanich_mahoz.py  0009_remove_hanich_ken_remove_historicalhanich_ken.py  0010_grade_hanich_ken_historicalhanich_ken.py  0011_add_grades.py  0012_alter_grade_options_remove_hanich_grade_and_more.py  0013_hanich_grade_historicalhanich_grade.py  0014_statushanich_hanich_arrived_to_the_event_and_more.py  0015_hanich_status_hanich_historicalhanich_status_hanich.py  0016_bus_busstop_hanichbusassignment.py  0017_alter_hanichbusassignment_unique_together_bus_date.py  0018_add_statuses.py  0019_alter_hanichbusassignment_options_and_more.py  0020_historicalbus_historicalbusstop_historicalgrade_and_more.py  0021_event_eventrosh_eventgroup_hanichinevent_and_more.py  0022_alter_hanichinevent_options.py  0023_remove_hanichinevent_registration_date_and_more.py  0024_alter_hanichinevent_event_alter_hanichinevent_group_and_more.py  (+2 more)
mifal_management/: apps.py  urls.py
(+33 files in other folders)
